add conclusions and acknowledgments

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2544,6 +2544,20 @@ We also compared the run-time of \fs against SPheno, Softsusy and the
 SARAH generated MSSM spectrum generator SPhenoMSSM.  The test results
 can be found in \secref{sec:comparison}.
 
+\section{Conclusions}
+
+We presented \fs, a Mathematica package, which generates fast and
+modular spectrum generators for non-minimal SUSY models.  [TODO:
+That's basically all, but we could add more.]
+
+\section*{Acknowledgments}
+
+A.V.\ would like to thank Florian Staub for countless explanations of
+SARAH's internals, discussions, and exceptionally fast bug fixing.
+Finally the authors thank Philip Diessner for testing and identifying
+bugs in the MRSSM model file, as well as Ulrik Günther for compilation
+tests on MacOS.
+
 \appendix
 
 \section{Speed test SLHA input file}
