correcting descr. of initial guess for Yukawa couplinges

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1477,8 +1477,9 @@ parameters at the low-scale.
     v_d &= v \cos\beta, & v_u &= v \sin\beta ,
   \end{align}
   where $v=246.22\unit{GeV}$.  Afterwards, the Yukawa couplings
-  $y_{u,d,e}$ of the SUSY model are set to the known Standard Model
-  Yukawa couplings (ignoring SUSY radiative corrections).
+  $y_{u,d,e}$ of the SUSY model are set from the known Standard Model
+  Yukawa couplings using the tree-level relations (ignoring SUSY
+  radiative corrections).
 \item The SUSY parameters are run to the user-supplied first guess of
   the high-scale (\code{HighScaleFirstGuess}).
 \item The high-scale boundary condition is imposed (defined in
