there are no alpha_b * alpha_tau corrections

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1373,7 +1373,7 @@ in the model file.  For example in the MSSM by default \fs adds two
 two-loop Higgs FORTRAN routines supplied by P.~Slavich from
 \cite{Degrassi:2001yf,Brignole:2001jy,Dedes:2002dy,Brignole:2002bz,Dedes:2003km}
 to add two loop corrections of $\oatas$, $\oabas$, $\oatq$,
-$\oabatau$, $\oabq$, $\oatauq$ and $\oatab$.  In the NMSSM
+$\oabq$, $\oatauq$ and $\oatab$.  In the NMSSM
 contributions of the order $\oatas$, $\oabas$ \cite{Degrassi:2009yq}
 can be added by setting \code{UseHiggs2LoopNMSSM = True} in the model
 file.
@@ -1701,10 +1701,10 @@ model file.  This enables two-loop Higgs FORTRAN routines supplied by
 P.~Slavich from
 \cite{Degrassi:2001yf,Brignole:2001jy,Dedes:2002dy,Brignole:2002bz,Dedes:2003km}
 which add two-loop corrections of $\oatas$, $\oabas$, $\oatq$,
-$\oabatau$, $\oabq$, $\oatauq$ and $\oatab$.  Something similar is
+$\oabq$, $\oatauq$ and $\oatab$.  Something similar is
 done for the NMSSM, but in this case the NMSSM $\oatas$, $\oabas$
 pieces come from \cite{Degrassi:2009yq}, while for $\oatq$,
-$\oabatau$, $\oabq$, $\oatauq$ and $\oatab$ the MSSM pieces are used
+$\oabq$, $\oatauq$ and $\oatab$ the MSSM pieces are used
 though it should be understood that these are not complete in the
 NMSSM. For other models since the Higgs mass is a very important
 measurement and the two-loop corrections can be larger than the
